@@ -149,7 +149,7 @@ public class ChainUpdater {
   public SignedBlockAndState finalizeCurrentChain() {
     final List<SignedBlockAndState> newBlocks = chainBuilder.finalizeCurrentChain(Optional.empty());
     newBlocks.forEach(this::saveBlock);
-    final SignedBlockAndState newHead = newBlocks.get(newBlocks.size() - 1);
+    final SignedBlockAndState newHead = newBlocks.getLast();
     updateBestBlock(newHead);
     return newHead;
   }
@@ -157,7 +157,7 @@ public class ChainUpdater {
   public SignedBlockAndState finalizeCurrentChainOptimistically() {
     final List<SignedBlockAndState> newBlocks = chainBuilder.finalizeCurrentChain(Optional.empty());
     newBlocks.forEach(this::saveOptimisticBlock);
-    final SignedBlockAndState newHead = newBlocks.get(newBlocks.size() - 1);
+    final SignedBlockAndState newHead = newBlocks.getLast();
     updateBestBlock(newHead);
     return newHead;
   }
